--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -83,11 +83,9 @@
             <h3 class="box-title">Pencarian Pegawai</h3>
         </div>
 
-        <!-- formFilter -->
-        <form id="formFilter" class="form-horizontal" method="POST">
-            {% module xsrf_form_html() %}
-            <div class="box-body">
 
+        <div class="form-horizontal">
+            <div class="box-body">
                 <div class="form-group">
                     <label class="control-label col-md-4 col-sm-4 col-xs-12" for="inputPegawaiid">Pegawai ID:</label>
                     <div class="col-md-4 col-sm-4 col-xs-12">
@@ -99,11 +97,9 @@
                         </div>
                     </div>
                 </div>
-
             </div>
             <!-- /.box-body -->
-        </form>
-        <!-- /.formFilter -->
+        </div>
 
     </div>
 
@@ -156,7 +152,6 @@
                             </div>
                         </div>
                     </div>
-                
                 </form>
             </div>
             <div class="modal-footer" id="userView">
