--- a/view/node/detailuser.html
+++ b/view/node/detailuser.html
@@ -34,7 +34,7 @@
             <div class="form-group">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="nama">Nama :</label>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input type="text" class="form-control" id="nama" name="nama" value="{{ pegawai['gelardepan'] }} {{ pegawai['nama'] }} {{ pegawai['gelarbelakang'] }}" readonly>
+                    <input type="text" class="form-control" id="nama" name="nama" value="{{ pegawai['gelardepan'] if 'gelardepan' in pegawai else '' }} {{ pegawai['nama'] }} {{ pegawai['gelarbelakang'] if 'gelarbelakang' in pegawai else '' }}" readonly>
                 </div>
             </div>
             {% if count == 0 %}
@@ -47,13 +47,13 @@
             <div class="form-group">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="phone">Phone :</label>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input type="text" class="form-control" id="phone" name="phone" value="{{ pegawai['phone'] }}">
+                    <input type="text" class="form-control" id="phone" name="phone" value="{{ pegawai['phone'] if 'phone' in pegawai else '' }}">
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">Email :</label>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input type="text" class="form-control" id="email" name="email" value="{{ pegawai['email'] }}">
+                    <input type="text" class="form-control" id="email" name="email" value="{{ pegawai['email'] if 'email' in pegawai else ''}}">
                 </div>
             </div>
             {% end %}
