--- a/view/node/detailrole.html
+++ b/view/node/detailrole.html
@@ -1,8 +1,11 @@
 <div class="modal-content">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-        </button>
+    <div class="modal-header" style="text-align:left;">
+        
+        <div class="box-tools pull-right">
+            <button type="button" class="btn close" data-dismiss="modal" aria-label="Close" ><i class="fa fa-times"></i>
+            </button>
+        </div>
+        <h4 class="modal-title" >Profile Pegawai</h4>
     </div>
     <div class="modal-body">
         <div id="formPegawai" class="form-horizontal">        
@@ -10,6 +13,12 @@
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">Pegawai ID :</label>
                 <div class="col-md-8 col-sm-8 col-xs-12">
                     <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}" readonly>
+                </div>
+            </div>
+            <div class="form-group form-group-md">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="nama">Username :</label>
+                <div class="col-md-8 col-sm-8 col-xs-12">
+                    <input type="text" class="form-control" name="username" id="username" value="{{ user['username'] }}" readonly>
                 </div>
             </div>
             <div class="form-group form-group-md">
