--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -116,7 +116,7 @@
                         <th>Pegawai ID</th>
                         <th>Nama</th>
                         <th>Create Date</th>
-                        <th>Edit</th>
+                        <th>Role</th>
                         <th>Deactived</th>
                     </tr>
                 </thead>
@@ -132,10 +132,13 @@
 <div class="modal fade" data-remote="false" id="modal-activation" data-backdrop="false" id="activedModal">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
+            <div class="modal-header" style="text-align:left;">
+            
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn close" data-dismiss="modal" aria-label="Close"><i class="fa fa-times"></i>
+                    </button>
+                </div>
+                <h4 class="modal-title">Pendaftaran Pegawai</h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal" id="formActivation" method="POST">
