--- a/view/page/auth/login.html
+++ b/view/page/auth/login.html
@@ -10,6 +10,28 @@
     .error {
         color: #dd4b39 !important;
     }
+
+    .alert-minimalist {
+        background-color: rgba(236, 171, 51, 0.945);
+        /* border-color: rgb(22, 22, 22); */
+        border-radius: 3px;
+        color: rgb(255, 255, 255);
+        padding: 10px;
+    }
+    .alert-minimalist > [data-notify="icon"] {
+        height: 50px;
+        margin-right: 12px;
+    }
+    .alert-minimalist > [data-notify="title"] {
+        color: rgb(255, 255, 255);
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
+        font-size: 130%;
+    }
+    .alert-minimalist > [data-notify="message"] {
+        font-size: 115%;
+    }
 </style>
 {% end %}
 
