--- a/view/node/detailberkas.html
+++ b/view/node/detailberkas.html
@@ -1,13 +1,41 @@
 <form class="form-horizontal" role="form">
     <input type="hidden" name="berkasid" value="{{ info['_id'] }}">
     <div class="form-group">
+        <div class="col-md-8 col-sm-8 col-xs-12 col-md-offset-3">
+            <div class="pull-right">
+                <button type="submit" id="btnSimpan" name="btnSimpan" class="btn btn-primary btn-md btn-flat"><i class="fa fa-floppy-o" aria-hidden="true"></i> Register Berkas</button>
+                <button type="button" id="btnBatal" name="btnBatal" class="btn btn-danger btn-flat"> Batal</button>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-md-2 col-sm-2 col-xs-12" for="nomorBerkas">Nomor Berkas:</label>
         <div class="col-md-4 col-sm-4 col-xs-12">
             <input type="text" name="nomorBerkas" id="nomorBerkas" class="form-control" value="{{ info['nomor']  }} / {{ info['tahun'] }},  {{ office['nama'].upper() }}" readonly>
         </div>
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="statusBerkas">Status Berkas:</label>
-        <div class="col-md-3 col-sm-3 col-xs-12">
-            <input type="text" name="statusBerkas" id="statusBerkas" class="form-control" value="{{ info['kegiatan'] }} , {% if info['status'] == '1' %}PROSES{% elif info['status'] == '0' %}SELESAI {% if info['finnishdate'] != '0001-01-01T00:00:00Z' %}Tanggal.{{ datetime.datetime.strptime(info['finnishdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }}{% end %}{% end %}" readonly>
+        <label class="control-label col-md-1 col-sm-1 col-xs-12" for="desaAlasHak">Desa:</label>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+            <select id="desaAlasHak" class="select2 form-control" style="width: 100%;">
+                <option value=""></option>
+                {% for d in desa %}
+                    <option value="{{ d['_id'] }}">{{d['kode']}} - {{ d['nama'].upper() }}, {{ d['wilayahinduk']['nama'] }}</option>
+                {% end %}
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="createBerkas">Pendaftaran:</label>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+            <input type="text" name="createBerkas" id="createBerkas" class="form-control" value="Tgl.{{ datetime.datetime.strptime(info['createdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }}  -  Tgl.{% if info['startdate'] != '0001-01-01T00:00:00Z' %}{{ datetime.datetime.strptime(info['startdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }} {% end %}" readonly>
+        </div>
+        <label class="control-label col-md-1 col-sm-1 col-xs-12" for="statusRegister">Status Register:</label>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+            <select id="statusRegister" class="select2 form-control" style="width: 100%;">
+                <option value=""></option>
+                {% for s in status %}
+                    <option value="{{ s['code'] }}"> {{ s['description'] }} </option>
+                {% end %}
+            </select>
         </div>
     </div>
     <div class="form-group">
@@ -15,62 +43,36 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
             <input type="text" name="prosedurBerkas" id="prosedurBerkas" class="form-control" value="{{ info['prosedur'] }}" readonly>
         </div>
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="createBerkas">Tanggal Pendaftaran:</label>
-        <div class="col-md-3 col-sm-3 col-xs-12">
-            <input type="text" name="createBerkas" id="createBerkas" class="form-control" value="{{ datetime.datetime.strptime(info['createdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }}  -  {% if info['startdate'] != '0001-01-01T00:00:00Z' %}{{ datetime.datetime.strptime(info['startdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }} {% end %}" readonly>
+        <label class="control-label col-md-1 col-sm-1 col-xs-12" for="pemohonBerkas">Pemohon/Pemilik:</label>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+            <input type="text" name="pemohonBerkas" id="pemohonBerkas" class="form-control" value="{{ info['pemohon'] }}   {% if pemilik == [] %}
+                                                                                                                           An. {{ info['pemohon'] }}
+                                                                                                                           {% else %}
+                                                                                                                               An. 
+                                                                                                                               {% for p in pemilik %}
+                                                                                                                                   {% if len(pemilik) > 1  %}
+                                                                                                                                       {{ p['nama'] }}, 
+                                                                                                                                   {% elif len(pemilik) == 1 %}
+                                                                                                                                       {{ p['nama'] }}
+                                                                                                                                   {% end %}
+                                                                                                                               {% end %}
+                                                                                                                           {% end %}" " readonly>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-md-2 col-sm-2 col-xs-12" for="pemilikBerkas">Posisi Berkas:</label>
         <div class="col-md-4 col-sm-4 col-xs-12">
-            <input type="text" name="pemilikBerkas" id="pemilikBerkas" class="form-control" value="{{ info['profile'] }}" readonly>
+            <input type="text" name="pemilikBerkas" id="pemilikBerkas" class="form-control" value="{{ info['profile'] }} ({{ info['pegawai'] }})" readonly>
         </div>
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="pegawaiBerkas">Petugas :</label>
-        <div class="col-md-3 col-sm-3 col-xs-12">
-            <input type="text" name="pegawaiBerkas" id="pegawaiBerkas" class="form-control" value="{{ info['pegawai'] }}" readonly>
+        <label class="control-label col-md-1 col-sm-1 col-xs-12" for="statusBerkas">Status Berkas:</label>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+            <input type="text" name="statusBerkas" id="statusBerkas" class="form-control" value="{{ info['kegiatan'].upper() }} , {% if info['status'] == '1' %}PROSES{% elif info['status'] == '0' %}SELESAI {% if info['finnishdate'] != '0001-01-01T00:00:00Z' %}  Tgl.{{ datetime.datetime.strptime(info['finnishdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }}{% end %}{% end %}" readonly>
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="pemohonBerkas">Pemohon/Pemilik:</label>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-            <input type="text" name="pemohonBerkas" id="pemohonBerkas" class="form-control" value="{{ info['pemohon'] }}    {% if pemilik == [] %}
-                                                                                                                             An. {{ info['pemohon'] }}
-                                                                                                                            {% else %}
-                                                                                                                                An. 
-                                                                                                                                {% for p in pemilik %}
-                                                                                                                                    {% if len(pemilik) > 1  %}
-                                                                                                                                        {{ p['nama'] }}, 
-                                                                                                                                    {% elif len(pemilik) == 1 %}
-                                                                                                                                        {{ p['nama'] }}
-                                                                                                                                    {% end %}
-                                                                                                                                {% end %}
-                                                                                                                            {% end %}" " readonly>
-        </div>
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="statusRegister">Status Register:</label>
-        <div class="col-md-3 col-sm-3 col-xs-12">
-            <select id="statusRegister" class="select2 form-control" style="width: 100%;">
-                <option value=""></option>
-                {% for d in desa %}
-                <option value="{{ d['_id'] }}">{{d['kode']}} - {{ d['nama'].upper() }}, {{ d['wilayahinduk']['nama'] }}</option>
-                {% end %}
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="desaAlasHak">Desa:</label>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-            <select id="desaAlasHak" class="select2 form-control" style="width: 100%;">
-                <option value=""></option>
-                {% for d in desa %}
-                <option value="{{ d['_id'] }}">{{d['kode']}} - {{ d['nama'].upper() }}, {{ d['wilayahinduk']['nama'] }}</option>
-                {% end %}
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="alasHak">Alas Hak:</label>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-            <input type="text" name="alasHak" id="alasHak" class="form-control">
+        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="alasHak">Keterangan:</label>
+        <div class="col-md-9 col-sm-9 col-xs-12">
+            <textarea name="keterangan" id="keterangan" class="form-control" cols="10" rows="5"></textarea>
         </div>
     </div>
     <div class="form-group">
