--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -35,6 +35,51 @@
     th.dt-center {
         text-align: center;
     }
+
+
+    .alert-info {
+        background-color: rgba(119, 131, 235, 0.945);
+        /* border-color: rgb(22, 22, 22); */
+        border-radius: 3px;
+        color: rgb(255, 255, 255);
+        padding: 10px;
+    }
+    .alert-info > [data-notify="icon"] {
+        height: 50px;
+        margin-right: 12px;
+    }
+    .alert-info > [data-notify="title"] {
+        color: rgb(255, 255, 255);
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
+        font-size: 130%;
+    }
+    .alert-info > [data-notify="message"] {
+        font-size: 115%;
+    }
+
+    .alert-minimalist {
+        background-color: rgba(236, 171, 51, 0.945);
+        /* border-color: rgb(22, 22, 22); */
+        border-radius: 3px;
+        color: rgb(255, 255, 255);
+        padding: 10px;
+    }
+    .alert-minimalist > [data-notify="icon"] {
+        height: 50px;
+        margin-right: 12px;
+    }
+    .alert-minimalist > [data-notify="title"] {
+        color: rgb(255, 255, 255);
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
+        font-size: 130%;
+    }
+    .alert-minimalist > [data-notify="message"] {
+        font-size: 115%;
+    }
 </style>
 {% end %}
 
@@ -83,7 +128,7 @@
     </div>
     <div class="box box-solid">
         <div class="box-header with-border">
-            <h3 class="box-title">Info Berkas</h3>
+            <h3 class="box-title">Berkas Masuk</h3>
         </div>
         <div class="box-body"  id="berkasView">
             <div class="error-content">
