--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -1,6 +1,6 @@
 {% extends "../../index.html" %}
 
-<!-- ANCHOR: Module CSS daftarpegawai.html -->
+<!-- ANCHOR: Module CSS inbox.html -->
 {% block css %}
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
@@ -21,7 +21,7 @@
 {% end %}
 
 
-<!-- ANCHOR: Module JS daftarpegawai.html -->
+<!-- ANCHOR: Module JS inbox.html -->
 {% block js %}
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
@@ -36,7 +36,7 @@
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/fixedHeader.bootstrap.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
-<script src="{{ static_url('js/page/administrator/daftarpegawai.js')}}"></script>
+<script src="{{ static_url('js/page/register/inbox.js')}}"></script>
 <style>
     .error {
         color: #dd4b39 !important;
@@ -50,19 +50,6 @@
         position: relative;
     }
 
-    tr.strikeout td:before {
-        content: " ";
-        position: absolute;
-        top: 50%;
-        left: 0;
-        border-bottom: 1px solid #111;
-        width: 100%;
-    }
-
-    tr.strikeout td:after {
-        content: "\00B7";
-        font-size: 1px;
-    }
 </style>
 {% end %}
 
@@ -73,7 +60,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-cog"></i> Administrator</li>
+        <li><i class="fa fa-cog"></i> Inbox</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
@@ -81,7 +68,7 @@
 <section class="content">
     <div class="box box-solid">
         <div class="box-header with-border text-center">
-            <h3 class="box-title">Pencarian Pegawai</h3>
+            <h3 class="box-title">Pencarian Register</h3>
         </div>
 
 
@@ -93,8 +80,7 @@
                         <div class="input-group input-group-md">
                             <input type="text" class="form-control" id="inputPegawaiid" name="inputPegawaiid">
                             <span class="input-group-btn">
-                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-success btn-flat"> <i
-                                        class="fa fa-filter" aria-hidden="true"></i> </button>
+                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> </button>
                             </span>
                         </div>
                     </div>
@@ -107,8 +93,7 @@
 
     <div class="box box-solid">
         <div class="box-body">
-            <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-activation"><i
-                    class="fa fa-user-plus" aria-hidden="true"></i></a>
+            <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-activation"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
             <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
             <!-- Table Pegawai -->
             <table id="tablePegawai" class="table table-striped table-bordered responsive" style="width:100%">
@@ -130,46 +115,4 @@
         </div>
     </div>
 </section>
-
-
-<div class="modal fade" data-remote="false" id="modal-activation" data-backdrop="false" id="activedModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header" style="text-align:left;">
-
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn close" data-dismiss="modal" aria-label="Close"><i
-                            class="fa fa-times"></i>
-                    </button>
-                </div>
-                <h4 class="modal-title">Pendaftaran Pegawai</h4>
-            </div>
-            <div class="modal-body">
-                <form class="form-horizontal" id="formActivation" method="POST">
-                    {% module xsrf_form_html() %}
-
-                    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="inputUsername">Username :</label>
-                        <div class="col-md-8 col-sm-8 col-xs-12">
-                            <div class="input-group input-group-md">
-                                <input type="text" class="form-control" id="inputUsername" name="inputUsername">
-                                <span class="input-group-btn">
-                                    <button id="btnFilterUsername" type="submit" class="btn btn-info btn-flat"> <i
-                                            class="fa fa-share-alt" aria-hidden="true"></i> </button>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer" id="userView">
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" data-remote="false" id="modal-role" data-backdrop="false" id="activedModal">
-    <div class="modal-dialog" id="userRole">
-    </div>
-</div>
 {% end %}
